--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    border-radius: 20px;
     background-color: #000;
     box-shadow: 0 0 10px #fff;
 }
